CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
SET(BUILD_SHARED_LIBS OFF)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

PROJECT(kv
        VERSION 2023.3.23
        LANGUAGES C CXX
        )

ADD_DEFINITIONS(-DOS_LINUX)

SET(KV_SRC_DIR ${PROJECT_SOURCE_DIR}/src)
SET(KV_SRC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src)
SET(KV_TEST_DIR ${PROJECT_SOURCE_DIR}/test)
#SET(LIBEE_TEST_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/test/include)
SET(KV_DEMO_DIR ${PROJECT_SOURCE_DIR}/demo)

#FILE(GLOB KV_CORE_SOURCE RELATIVE ${CMAKE_SOURCE_DIR} "src/*.h")
#ADD_LIBRARY(kv ${KV_CORE_SOURCE})
#TARGET_INCLUDE_DIRECTORIES(
#   kv
#    PUBLIC ${LIBEE_SRC_INCLUDE_DIR}
#)

ADD_EXECUTABLE(main ${KV_DEMO_DIR}/main.cpp)
#TARGET_LINK_LIBRARIES(main kv)
TARGET_INCLUDE_DIRECTORIES(
    main
    PUBLIC ${KV_SRC_INCLUDE_DIR}
)

#ADD_EXECUTABLE(demo2 ${LIBEE_DEMO_DIR}/demo2.cpp)
#TARGET_LINK_LIBRARIES(demo2 ee_core)
#TARGET_INCLUDE_DIRECTORIES(
#    demo2
#    PUBLIC ${LIBEE_SRC_INCLUDE_DIR}
#)